# svppl

./: .gitignore  Cargo.toml  deno.json  justfile  readme.md  rust-toolchain.toml
cli/: Cargo.toml  package.json  sync_binaries.sh
cli/src/: main.rs  project_template.rs
cli/src/cli/: mod.rs
cli/src/templates/typescript/: package.json.hbs
cli/tests/: main_tests.rs
js/: durable.mjs  lib.ts  main.ts  viters.ts
sandbox/blah/: package.json
sandbox/zing/: package.json
server/: Cargo.toml  build.rs
server/proto/svppl/: svppl.proto
server/src/: app.rs  cli.rs  cluster_monitor.rs  frontend.rs  gossip.rs  lib.rs  main.rs  opts.rs  partition_resolver.rs  resolve_addr.rs  task_service.rs
server/src/conhash/: mod.rs
server/src/persistence/: common.rs  mod.rs  postgres.rs
server/src/rpc/: live_services.rs  mod.rs  partition_router.rs  proto.rs  server.rs  start.rs  task_service.rs
server/tests/: mod.rs
server/tests/persistence/: mod.rs  postgres_image.rs  postgres_tests.rs
server/tests/simulation/: cluster_monitor_transport.rs  mod.rs
