[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
clap = {version = "4.4.11", features = ["derive"]}
futures = "0.3.29"
handlebars = "4.5.0"
inquire = "0.6.2"
serde_json = "1.0.108"

[dev-dependencies]
assert_cmd = "2.0.12"
assert_fs = "1.0.13"
predicates = "3.0.4"
rexpect = "0.5.0"
