[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]
name = "server_lib"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.74"
chitchat = "0.7.0"
clap = {version = "4.4.11", features = ["derive"]}
futures = "0.3.29"
nanoid = "0.4.0"
prost = "0.12.3"
serde_json = "1.0.108"
sqlx = {version = "0.7.3", features = [ "runtime-tokio", "postgres" ] }
tokio = {version = "1.35.0", features = ["full"]}
tonic = "0.10.2"
warp = "0.3.6"

[dev-dependencies]
assert_cmd = "2.0.12"
testcontainers = "0.15.0"

[build-dependencies]
tonic-build = "0.10.2"
